--- a/hcergek/static/css/main/main.css
+++ b/hcergek/static/css/main/main.css
@@ -1,3 +1,110 @@
+@import url('https:/fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
+
+
 body{
     font-size: 14;
 }
+
+
+    .mobile-layout {
+        padding: 20px;
+        font-family: 'Open Sans';
+    }
+
+    .menu-icon {
+        cursor: pointer;
+        margin-bottom: 20px;
+    }
+
+    .menu {
+        display: none; 
+        background-color: #f4f4f4;
+        padding: 10px;
+        border-radius: 5px;
+    }
+
+    .level-container {
+        text-align: center;
+        margin-top: 50px;
+        margin-bottom: 5px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .level-icon {
+        width: 64px;
+        height: 64px;
+        background-color: #484AA1;
+        margin-bottom: 15px;
+    }
+
+    .level-name {
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+    .progress-bar {
+        width: 210px;
+        height: 12px;
+        border-radius: 0 auto 10px auto;
+        margin: 2px 10px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .progress {
+        background-color: #484AA1;
+        width: 0;
+        border-radius: 10px;
+    }
+
+    .experience {
+        font-size: 12px;
+        width: auto;
+        height: 20px;
+    }
+
+    .user-info {
+        font-size: 18px;
+        font-family: 'Open Sans';
+        margin-left: 20px;
+    }
+
+    .user-label {
+        font-size: 12px;
+        opacity: 0.6;
+    }
+
+    @media screen and (max-width: 768px) {
+        .mobile-layout {
+            padding: 10px;
+        }
+
+        .level-container {
+            margin-bottom: 5px;
+            padding-top: 20px;
+        }
+
+        .level-icon {
+            width: 64px;
+            height: 64px;
+        }
+
+        .level-name {
+            font-size: 20px;
+            width: 166px;
+            height: 33px;
+        }
+
+        .experience{
+            width: auto;
+            height: 40px;
+
+        }
+        .user-info {
+            font-size: 18px;
+        }
+        
+    }
+
