Создание адреса моих активностей

--- a/hcergek/templates/main/main.html
+++ b/hcergek/templates/main/main.html
@@ -36,7 +36,7 @@
 
         <!-- Линия прогресса -->
         <div class="progress-bar">
-            <div class="progress" style="width: {{ obj.experience }}%;"></div>
+            <div class="progress"></div>
         </div>
 
         <!-- Опыт -->
