--- a/hcergek/templates/main/main.html
+++ b/hcergek/templates/main/main.html
@@ -14,7 +14,7 @@
     <!-- Иконка меню -->
     <div class="menu-icon" onclick="toggleMenu()">
         <img src="{% static 'images/menu_icon.png' %}" alt="Меню">
-        <div style="justify-content: right; width: 375px; text-align: end; margin-top: -20px; font-size: 22px;"><div>{{ obj.score }}</div><img src="{% static 'images/maney.png' %}"></div>
+        <div style="justify-content: right; width: 340px; text-align: end; margin-top: -20px; font-size: 22px;"><div>{{ obj.score }}</div><img style="width: 40px; height: 32px; margin-top: -70px; margin-right: -42px;" src="{% static 'images/money.png' %}" ></div>
     </div>
 
     <!-- Меню скрытое -->
