--- a/hcergek/templates/main/main.html
+++ b/hcergek/templates/main/main.html
@@ -27,7 +27,7 @@
         <div class="level-container">
             <!-- Квадратик уровня -->
             <div class="level-icon">
-                <img src="/media/{{ obj.level.lvl }}">
+                <img src="/media/{{ obj.level.img }}">
             </div>
 
             
