--- a/hcergek/templates/main/achievements.html
+++ b/hcergek/templates/main/achievements.html
@@ -59,11 +59,11 @@
                             <div class="achievement-content">
                                 <div class="achievement-icon ">
                                     <img width="auto" height="120%" style="margin-left: -40px; border-radius: 3vw; margin-top: -10px;" src="/media/{{ obj.achievement.icon }}">
-                                    <img src="{% static 'images/checkmark.png' %}" width="70px" height="70px" class="checkmark" style="margin-top: -70px; margin-left: -10px;">
+                                    <img src="{% static 'images/checkmark.png' %}" width="70px" height="70px" class="checkmark" style="margin-top: -110px; margin-left: -45px; position: 0 0;">
                                 </div>
                             </div>
                             <!-- Сколько монет -->
-                            <div class="coins" style="margin-top: -12px; margin-left: 7.5px;"><img style="width: 15px; height: 15px; margin-top: -3px; margin-right: 3px;" src="{% static 'images/money.png' %}">{{ obj.achievement.addScore }}</div>
+                            <div class="coins" style="color: #52A14B; margin-top: -12px; margin-left: 7.5px;"><img style="width: 15px; height: 15px; margin-top: -3px; margin-right: 3px;" src="{% static 'images/money.png' %}">{{ obj.achievement.addScore }}</div>
                         </div>
                         <!-- Линия прогресса -->
                         <div class="progress-bar-ach" style="background-color: #52A14B; margin-left: 15px; width: 85%; margin-top: -10px;">
