--- a/hcergek/static/css/main/achievements.css
+++ b/hcergek/static/css/main/achievements.css
@@ -122,14 +122,14 @@ body {
 
 .sidebar {
     background-color: #fff;
-    width: 380px;
+    width: 410px;
     height: 65px;
     margin-left: -10px;
     margin-top: -10px;
 }
 
 .checkmark {
-    position: absolute;
+    position: relative;
     left: 70%;
     opacity: 0.8;
 }
