--- a/hcergek/templates/main/main.html
+++ b/hcergek/templates/main/main.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" href="{% static 'css/main/main.css' %}">
 
-
+{% if user.is_authenticated  %}
 
 <div class="mobile-layout">
 
@@ -137,6 +137,33 @@
 {% endfor %}
 </div>
 
+{% else %}
+
+<div class="container mt-5">
+    <div class="row d-flex justify-content-center">
+       <div class="col-12 col-lg-3">
+           <h5 class="text-h1">Вход</h5>
+           <form class="mt-3" name="login_form" id="login_form" method="post" action="{% url 'login' %}">
+               {% csrf_token %}
+               <div class="mb-3">
+                   <label for="exampleInputEmail1" class="text-h2">Логин</label>
+                   <input name ="username" type="username" class="form-control">
+               </div>
+               <div class="mb-3">
+                   <label for="exampleInputPassword1" class="text-h2">Пароль</label>
+                   <input name="password" type="password" class="form-control">
+               </div>
+               {% if error %}
+                    <h6 class="text-danger">{{ error }}</h6>
+               {% endif %}
+               <button type="submit" class="btn btn-dark mt-1" value="login">Войти</button>
+               <input type="hidden" name="next" value="{{ next }}"/>
+           </form>
+       </div>
+    </div>
+</div>
+
+{% endif %}
 
 <script>
     function toggleMenu() {
