--- a/hcergek/templates/main/achievements.html
+++ b/hcergek/templates/main/achievements.html
@@ -26,7 +26,7 @@
                     <span><a class="url" href="{% url 'achievements' %}">Достижения</a></span>
                 </div>
                 <div class="menu-item col-4">
-                    <span><a class="url" href="{% url 'achievements' %}">Активности</a></span>
+                    <span><a class="url" href="{% url 'myActivities' %}">Активности</a></span>
                 </div>
                 
                 </div>
